// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<File /> should render 1`] = `
<File__StyledChange>
  <File__NameCreation>
    <strong>
      foo.fa
    </strong>
    <File__Creation>
      <span>
        <span
          style={
            Object {
              "fontSize": 12,
            }
          }
        >
          Uploaded 
          <RelativeTime
            time="2018-02-14T17:12:00.000000Z"
          />
        </span>
         
        by 
        bill
      </span>
    </File__Creation>
  </File__NameCreation>
  <File__SizeTrashCan>
    <Icon
      bsStyle="danger"
      faStyle="fas"
      fixedWidth={false}
      name="trash"
      onClick={[Function]}
      pullRight={true}
      style={
        Object {
          "fontSize": "17px",
          "marginLeft": "9px",
        }
      }
    />
  </File__SizeTrashCan>
</File__StyledChange>
`;

exports[`<File /> should render when [canRemove=false] 1`] = `
<File__StyledChange>
  <File__NameCreation>
    <strong>
      foo.fa
    </strong>
    <File__Creation>
      <span>
        <span
          style={
            Object {
              "fontSize": 12,
            }
          }
        >
          Uploaded 
          <RelativeTime
            time="2018-02-14T17:12:00.000000Z"
          />
        </span>
         
        by 
        bill
      </span>
    </File__Creation>
  </File__NameCreation>
  <File__SizeTrashCan />
</File__StyledChange>
`;

exports[`<File /> should render when [user=null] 1`] = `
<File__StyledChange>
  <File__NameCreation>
    <strong>
      foo.fa
    </strong>
    <File__Creation>
      <span>
        Retrieved 
        <RelativeTime
          time="2018-02-14T17:12:00.000000Z"
        />
      </span>
    </File__Creation>
  </File__NameCreation>
  <File__SizeTrashCan>
    <Icon
      bsStyle="danger"
      faStyle="fas"
      fixedWidth={false}
      name="trash"
      onClick={[Function]}
      pullRight={true}
      style={
        Object {
          "fontSize": "17px",
          "marginLeft": "9px",
        }
      }
    />
  </File__SizeTrashCan>
</File__StyledChange>
`;
